[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Pixel Art Assets/Explosion-export.png" type="Texture" id=1]
[ext_resource path="res://src/FireSpellAOE.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlastRadius/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "boom"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlastRadius/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "delete"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=3]
radius = 125.036

[node name="FireSpellAOE" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/boom = SubResource( 5 )

[node name="ShroomZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShroomZone"]
shape = SubResource( 2 )

[node name="BlastRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastRadius"]
shape = SubResource( 3 )
disabled = true

[connection signal="body_entered" from="ShroomZone" to="." method="_on_ShroomZone_body_entered"]
[connection signal="body_entered" from="BlastRadius" to="." method="_on_BlastRadius_body_entered"]
